methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:1: error: illegal start of simple pattern
var C array = (Color.YELLOW, Color.RED,Color.BLUE, Color.GREEN)
            ^MethodsPicture:2: error: '=' expected but ';' found.
override def run() {
^