methods.picture.MethodsPicture.scala.code
var C array = (Color.YELLOW, Color.RED,Color.BLUE, Color.GREEN)
override def run() {
  for (i <- 1 to 3){
    for (j <- 1 to 3){
      avance(5)
      for (k <- 1 to 4){
        avance(2)
        faireV(C(k))
        avance(2)
        gauche()
        
      }
    }
  }
}

def peindreDevant(c:Color) {
    avance()
  setCouleurBrosse(c)
    baisseBrosse()
    leveBrosse()
    recule()
}
def faireV(c:Color) {
  peindreDevant(c)
  gauche()
 	peindreDevant(c)
 	gauche()
 	peindreDevant(c)
 	retourne()
}